.github/fod-3.2.21-validation.log
    Updating crates.io index
 Downloading crates ...
  Downloaded anstream v1.0.0
  Downloaded anstyle-parse v1.0.0
  Downloaded anstyle-query v1.1.5
  Downloaded anstyle v1.0.14
  Downloaded aho-corasick v1.1.4
  Downloaded equivalent v1.0.2
  Downloaded generic-array v0.14.7
  Downloaded cfg_aliases v0.2.1
  Downloaded heck v0.5.0
  Downloaded cpufeatures v0.2.17
  Downloaded colorchoice v1.0.5
  Downloaded same-file v1.0.6
  Downloaded clap_derive v4.6.1
  Downloaded memoffset v0.9.1
  Downloaded page_size v0.6.0
  Downloaded strsim v0.11.1
  Downloaded ref-cast v1.0.25
  Downloaded itoa v1.0.18
  Downloaded env_filter v1.0.1
  Downloaded proc-macro-crate v3.5.0
  Downloaded pbkdf2 v0.12.2
  Downloaded cfg-if v1.0.4
  Downloaded linked-hash-map v0.5.6
  Downloaded subtle v2.6.1
  Downloaded crypto-common v0.1.7
  Downloaded ref-cast-impl v1.0.25
  Downloaded version_check v0.9.5
  Downloaded clap_lex v1.1.0
  Downloaded rand_chacha v0.3.1
  Downloaded hmac v0.12.1
  Downloaded quote v1.0.45
  Downloaded num_enum v0.7.6
  Downloaded sha2 v0.10.9
  Downloaded toml_datetime v1.1.1+spec-1.1.0
  Downloaded scopeguard v1.2.0
  Downloaded lock_api v0.4.14
  Downloaded rand_core v0.6.4
  Downloaded utf8parse v0.2.2
  Downloaded num_enum_derive v0.7.6
  Downloaded pkg-config v0.3.33
  Downloaded ppv-lite86 v0.2.21
  Downloaded is_terminal_polyfill v1.70.2
  Downloaded block-buffer v0.10.4
  Downloaded rustversion v1.0.22
  Downloaded digest v0.10.7
  Downloaded env_logger v0.11.10
  Downloaded autocfg v1.5.0
  Downloaded zmij v1.0.21
  Downloaded clap v4.6.1
  Downloaded parking_lot v0.12.5
  Downloaded parking_lot_core v0.9.12
  Downloaded iana-time-zone v0.1.65
  Downloaded walkdir v2.5.0
  Downloaded getrandom v0.2.17
  Downloaded toml_parser v1.1.2+spec-1.1.0
  Downloaded smallvec v1.15.1
  Downloaded indexmap v2.14.0
  Downloaded log v0.4.29
  Downloaded serde_derive v1.0.228
  Downloaded fuser v0.17.0
  Downloaded serde_core v1.0.228
  Downloaded unicode-ident v1.0.24
  Downloaded proc-macro2 v1.0.106
  Downloaded bitflags v2.13.0
  Downloaded num-traits v0.2.19
  Downloaded toml_edit v0.25.12+spec-1.1.0
  Downloaded base64 v0.22.1
  Downloaded rand v0.8.6
  Downloaded memchr v2.8.0
  Downloaded zerocopy-derive v0.8.48
  Downloaded serde v1.0.228
  Downloaded typenum v1.20.0
  Downloaded hashbrown v0.17.1
  Downloaded clap_builder v4.6.0
  Downloaded serde_json v1.0.149
  Downloaded regex v1.12.3
  Downloaded chrono v0.4.44
  Downloaded winnow v1.0.3
  Downloaded zerocopy v0.8.48
  Downloaded syn v2.0.117
  Downloaded nix v0.30.1
  Downloaded regex-syntax v0.8.10
  Downloaded regex-automata v0.4.14
  Downloaded jiff v0.2.24
  Downloaded libc v0.2.186
   Compiling proc-macro2 v1.0.106
   Compiling quote v1.0.45
   Compiling unicode-ident v1.0.24
   Compiling libc v0.2.186
    Checking cfg-if v1.0.4
   Compiling version_check v0.9.5
   Compiling generic-array v0.14.7
    Checking memchr v2.8.0
    Checking typenum v1.20.0
   Compiling serde_core v1.0.228
    Checking subtle v2.6.1
   Compiling syn v2.0.117
    Checking utf8parse v0.2.2
   Compiling zmij v1.0.21
   Compiling zerocopy v0.8.48
    Checking crypto-common v0.1.7
    Checking block-buffer v0.10.4
    Checking digest v0.10.7
    Checking anstyle-parse v1.0.0
   Compiling autocfg v1.5.0
   Compiling serde_json v1.0.149
    Checking anstyle v1.0.14
    Checking is_terminal_polyfill v1.70.2
    Checking anstyle-query v1.1.5
    Checking colorchoice v1.0.5
    Checking anstream v1.0.0
    Checking itoa v1.0.18
   Compiling fod-rust-runtime v3.2.21 (/home/runner/work/fod/fod/rust_runtime)
    Checking cpufeatures v0.2.17
    Checking strsim v0.11.1
   Compiling heck v0.5.0
    Checking clap_lex v1.1.0
    Checking clap_builder v4.6.0
    Checking sha2 v0.10.9
    Checking getrandom v0.2.17
    Checking base64 v0.22.1
   Compiling equivalent v1.0.2
   Compiling hashbrown v0.17.1
   Compiling winnow v1.0.3
   Compiling indexmap v2.14.0
    Checking rand_core v0.6.4
   Compiling toml_datetime v1.1.1+spec-1.1.0
   Compiling memoffset v0.9.1
    Checking hmac v0.12.1
    Checking aho-corasick v1.1.4
   Compiling parking_lot_core v0.9.12
   Compiling toml_parser v1.1.2+spec-1.1.0
   Compiling cfg_aliases v0.2.1
   Compiling rustversion v1.0.22
    Checking regex-syntax v0.8.10
   Compiling toml_edit v0.25.12+spec-1.1.0
   Compiling zerocopy-derive v0.8.48
   Compiling clap_derive v4.6.1
    Checking regex-automata v0.4.14
   Compiling proc-macro-crate v3.5.0
   Compiling nix v0.30.1
    Checking pbkdf2 v0.12.2
   Compiling num-traits v0.2.19
    Checking clap v4.6.1
    Checking log v0.4.29
    Checking scopeguard v1.2.0
   Compiling pkg-config v0.3.33
   Compiling ref-cast v1.0.25
    Checking smallvec v1.15.1
    Checking regex v1.12.3
    Checking lock_api v0.4.14
   Compiling fuser v0.17.0
   Compiling num_enum_derive v0.7.6
   Compiling ref-cast-impl v1.0.25
    Checking bitflags v2.13.0
   Compiling serde v1.0.228
    Checking parking_lot v0.12.5
    Checking num_enum v0.7.6
    Checking env_filter v1.0.1
   Compiling serde_derive v1.0.228
    Checking fod-rust-hotpath v3.2.21 (/home/runner/work/fod/fod/rust_hotpath)
    Checking page_size v0.6.0
    Checking iana-time-zone v0.1.65
    Checking ppv-lite86 v0.2.21
    Checking same-file v1.0.6
    Checking jiff v0.2.24
    Checking rand_chacha v0.3.1
   Compiling fod-rust-fuse v3.2.21 (/home/runner/work/fod/fod/rust_fuse)
    Checking rand v0.8.6
    Checking walkdir v2.5.0
    Checking chrono v0.4.44
    Checking linked-hash-map v0.5.6
    Checking fod-rust-mkfs v3.2.21 (/home/runner/work/fod/fod/rust_mkfs)
    Checking fod-rust-indexer v3.2.21 (/home/runner/work/fod/fod/rust_indexer)
    Checking env_logger v0.11.10
warning: method `human_readable` is never used
   --> rust_indexer/src/read_api.rs:126:8
    |
125 | impl FileCatalogItem {
    | -------------------- method in this implementation
126 |     fn human_readable(&self) -> String {
    |        ^^^^^^^^^^^^^^
    |
    = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

warning: method `human_readable` is never used
   --> rust_indexer/src/read_api.rs:162:12
    |
161 | impl FileCatalogOutput {
    | ---------------------- method in this implementation
162 |     pub fn human_readable(&self) -> String {
    |            ^^^^^^^^^^^^^^

warning: method `human_readable` is never used
   --> rust_indexer/src/read_api.rs:198:12
    |
197 | impl FileShowOutput {
    | ------------------- method in this implementation
198 |     pub fn human_readable(&self) -> String {
    |            ^^^^^^^^^^^^^^

warning: `fod-rust-indexer` (bin "fod-indexer") generated 3 warnings
    Finished `dev` profile [unoptimized + debuginfo] target(s) in 12.19s
warning: method `human_readable` is never used
   --> rust_indexer/src/read_api.rs:126:8
    |
125 | impl FileCatalogItem {
    | -------------------- method in this implementation
126 |     fn human_readable(&self) -> String {
    |        ^^^^^^^^^^^^^^
    |
    = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

warning: method `human_readable` is never used
   --> rust_indexer/src/read_api.rs:162:12
    |
161 | impl FileCatalogOutput {
    | ---------------------- method in this implementation
162 |     pub fn human_readable(&self) -> String {
    |            ^^^^^^^^^^^^^^

warning: method `human_readable` is never used
   --> rust_indexer/src/read_api.rs:198:12
    |
197 | impl FileShowOutput {
    | ------------------- method in this implementation
198 |     pub fn human_readable(&self) -> String {
    |            ^^^^^^^^^^^^^^

warning: `fod-rust-indexer` (bin "fod-indexer") generated 3 warnings
    Finished `dev` profile [unoptimized + debuginfo] target(s) in 0.03s
   Compiling typenum v1.20.0
   Compiling syn v2.0.117
   Compiling serde_core v1.0.228
   Compiling utf8parse v0.2.2
   Compiling libc v0.2.186
   Compiling anstyle-parse v1.0.0
   Compiling zmij v1.0.21
   Compiling anstyle v1.0.14
   Compiling generic-array v0.14.7
   Compiling itoa v1.0.18
   Compiling is_terminal_polyfill v1.70.2
   Compiling memchr v2.8.0
   Compiling crypto-common v0.1.7
   Compiling block-buffer v0.10.4
   Compiling anstyle-query v1.1.5
   Compiling colorchoice v1.0.5
   Compiling anstream v1.0.0
   Compiling digest v0.10.7
   Compiling clap_lex v1.1.0
   Compiling strsim v0.11.1
   Compiling serde_json v1.0.149
   Compiling cpufeatures v0.2.17
   Compiling cfg-if v1.0.4
   Compiling sha2 v0.10.9
   Compiling clap_builder v4.6.0
   Compiling base64 v0.22.1
   Compiling fod-rust-runtime v3.2.21 (/home/runner/work/fod/fod/rust_runtime)
   Compiling same-file v1.0.6
   Compiling clap_derive v4.6.1
   Compiling serde_derive v1.0.228
   Compiling fod-rust-hotpath v3.2.21 (/home/runner/work/fod/fod/rust_hotpath)
   Compiling clap v4.6.1
   Compiling walkdir v2.5.0
   Compiling serde v1.0.228
   Compiling fod-rust-indexer v3.2.21 (/home/runner/work/fod/fod/rust_indexer)
error[E0027]: pattern does not mention field `snapshot_id`
   --> rust_indexer/src/cli.rs:662:26
    |
662 |                 command: FileCommands::Show { id },
    |                          ^^^^^^^^^^^^^^^^^^^^^^^^^ missing field `snapshot_id`
    |
help: include the missing field in the pattern
    |
662 |                 command: FileCommands::Show { id, snapshot_id },
    |                                                 +++++++++++++
help: if you don't care about this missing field, you can explicitly ignore it
    |
662 |                 command: FileCommands::Show { id, snapshot_id: _ },
    |                                                 ++++++++++++++++
help: or always ignore missing fields here
    |
662 |                 command: FileCommands::Show { id, .. },
    |                                                 ++++

For more information about this error, try `rustc --explain E0027`.
error: could not compile `fod-rust-indexer` (bin "fod-indexer" test) due to 1 previous error
